# womens-mag

./: .env.example  .gitignore  DEPLOY.md  README.md
.github/workflows/: update-and-deploy.yml
pipeline/: config.yaml  pyproject.toml
pipeline/data/: news.db
pipeline/src/: config.py  images.py  main.py  md_writer.py  models.py  rewriter.py  storage.py
pipeline/src/parsers/: base.py  factory.py  passion.py  rss.py
web/: astro.config.mjs  package.json  tailwind.config.mjs
web/public/: robots.txt
web/src/: consts.ts
web/src/components/: ArticleCard.astro  BentoHero.astro  Footer.astro  Header.astro  SEO.astro
web/src/content/: config.ts
web/src/content/articles/: aleksandr-vasilev-o-gonorare-v-modnom-prigovore-summa-byla-ochen-skromnoy.md  andrey-merzlikin-o-sluhah-pro-roman-s-24-letnim-instruktorom-po-skalolazaniyu.md  bonya-vstupilas-za-chekalinu-gasanov-sygral-svadbu-samoylova-vyvozit-veschi-iz-d.md  broshennaya-beremennoy-sasha-sivkova-o-novoy-lyubvi-i-chuvstve-viny.md  byuti-razbor-mmkf-2025-10-obrazov-s-krasnoy-dorozhki-kotorye-hochetsya-povtorit.md  chistaya-kozha-kak-novaya-roskosh-pochemu-zumery-svodyat-tatuirovki.md  chuvstvuyut-nevidimoe-tri-znaka-zodiaka-s-misticheskoy-siloy.md  chuzhoy-pasport-i-isk-na-milliony-kak-lunara-dokazala-chto-ne-yavlyaetsya-matery.md  danila-kozlovskiy-narushil-glavnoe-pravilo-publichnoe-priznanie-oksane-akinshino.md  (+26 more)
web/src/layouts/: BaseLayout.astro
web/src/pages/: about.astro  contacts.astro  index.astro  privacy.astro  rss.xml.ts  sitemap.xml.ts
web/src/styles/: global.css
web/src/utils/: url.ts
(+6 files in other folders)
